src/objects/JSONBuilderSchema__mdt.object
<CustomObject>
    <description>This is used for storing the JSON structure to be used for building the final JSON string for the integrations&lt;</description>
    <label>JSONBuilderSchema</label>
    <pluralLabel>JSONBuilderSchemas</pluralLabel>
    <fields>
        <fullName>Mapped_To__c</fullName>
        <label>Mapped To?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <label>Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <description>Field for storing the array position for the structure. In case the Structure field needs a multiplicity we’ll need to know what array position this field belongs to. Example 1,2,3,4,5</description>
        <inlineHelpText>Field for storing the array position for the structure. In case the Structure field needs a multiplicity we’ll need to know what array position this field belongs to. Example 1,2,3,4,5</inlineHelpText>
        <label>Position</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_Field_Name__c</fullName>
        <label>SFDC Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceAttribute__c</fullName>
        <inlineHelpText>This is the attribute in the Proxy Object JSON field that we need to assess</inlineHelpText>
        <label>Source Attribute</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceType__c</fullName>
        <inlineHelpText>This is the Proxy Object type we want to assess</inlineHelpText>
        <label>Source Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Structure__c</fullName>
        <inlineHelpText>This will dictate the structure in the destination JSON string.</inlineHelpText>
        <label>Structure</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
</CustomObject>